# Civic-mmlm

./: .gitignore  CITATION.cff  CONTRIBUTING.md  README.md  VALIDATION.md  pyproject.toml  requirements.txt
configs/: demo.yaml  paper_reference.yaml
docs/: DATASETS.md  MAPPING_TO_PAPER.md  MODEL_CARD.md
examples/: sample_case.json
outputs/demo/: README.md  best_model.pt  calibrator.json  certificate_example.json  metrics.json  training_history.json
scripts/: calibrate_demo.py  evaluate_demo.py  predict_demo.py  prepare_data.py  run_demo.sh  train_demo.py
src/civic_mmlm/: __init__.py  config.py
src/civic_mmlm/data/: factory.py  registry.py  synthetic.py  types.py
src/civic_mmlm/evaluation/: metrics.py  stress.py
src/civic_mmlm/models/: barycenter.py  certificates.py  civic_mmlm.py  conformal.py  constraints.py  evidence.py  interventions.py  utility.py
src/civic_mmlm/training/: __init__.py  losses.py  trainer.py
src/civic_mmlm/utils/: io.py  seed.py
tests/: conftest.py  test_certificate.py  test_conformal.py  test_constraints.py  test_forward.py  test_training_step.py
