[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "civic-mmlm-public"
version = "0.1.0"
description = "CIVIC-MMLM toolkit"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
authors = [{name = "Contributors"}]
dependencies = [
  "numpy>=1.24",
  "PyYAML>=6.0",
  "scipy>=1.10",
  "scikit-learn>=1.3",
  "pandas>=2.0",
  "matplotlib>=3.7",
  "torch>=2.1",
]

[project.optional-dependencies]
real-data = ["datasets>=2.18", "transformers>=4.40", "accelerate>=0.29", "peft>=0.10"]
dev = ["pytest>=8.0", "ruff>=0.5"]

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
addopts = "-q"

[tool.ruff]
line-length = 100
